# sri

./: LICENSE  README.md  config.json  package.json  pnpm-lock.yaml  pyproject.toml
src/: config.ts  models.py
src/models/: comprobante.ts  document.ts
tests/: factura.test.ts
