[tool.poetry]
name = "sri"
version = "0.0.1"
description = "Cliente Python de la API del Servicio de Rentas Internas (SRI)"
authors = ["tenpisoft"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
